<resources>
    <string name="app_name" translatable="false">Greta</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA0MecAsPNdD43zYoFih3hgxh7_H2Gq5Co</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_map">Map</string>
    <string name="tittle_history">History</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_location_message">Greta needs to access your location</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <!-- Firebase Database -->
    <string name="firebase_child_data" translatable="false">data</string>
    <string name="firebase_child_users" translatable="false">users</string>

    <!-- Sync Preferences -->
    <string name="username_title">Username</string>
    <string name="localisation_provider_title">Localisation provider</string>
    <string name="localisation_update_time_frequency_title">Localisation refresh time</string>
    <string name="localisation_update_distance_frequency_title">Localisation refresh distance</string>
    <string name="measure_title">Unit</string>
    <string name="username_key" translatable="false">username</string>
    <string name="localisation_provider_key" translatable="false">localisation_provider</string>
    <string name="localisation_update_time_frequency_key" translatable="false">localisation_update_time_frequency</string>
    <string name="localisation_update_distance_frequency_key" translatable="false">localisation_update_distance_frequency</string>
    <string name="measure_key" translatable="false">measure</string>
    <string name="localisation_providers_default" translatable="false">network</string>
    <string name="localisation_update_time_frequency_default" translatable="false">5000</string>
    <string name="localisation_update_distance_frequency_default" translatable="false">10</string>
    <string name="localisation_automatic_key" translatable="false">localisation_automatic</string>
    <string name="unknown_user">Unknown user</string>
    <string name="localisation_automatic_title">Automatic</string>
    <string name="title_activity_track_details">Map</string>
    <string name="extra_track_id" translatable="false">extra_track_details</string>
    <string name="distance_holder">Distance : %d</string>
    <string name="duration_holder">Duration : %d</string>
    <string name="waypoints_hodler">Waypoints : %d</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="latitude_firebase_model_key" translatable="false">latitude</string>
    <string name="longitude_firebase_model_key" translatable="false">longitude</string>
    <string name="username_firebase_model_key" translatable="false">username</string>

    <!-- CompassView -->
    <string name="compass_north">N</string>
    <string name="compass_east">E</string>
    <string name="compass_south">S</string>
    <string name="compass_west">W</string>
    <string name="out_index_degrees" translatable="false">Degrees must be between 0 and 359, both inclusive. Actual value: </string>
    <string name="out_index_range_degrees" translatable="false">Range degrees must be between 90 and 360, both inclusive. Actual value: </string>
    <string name="altitude_firebase_model_key">altitude</string>
    <string name="new_name">New name</string>
    <string name="ok">OK</string>
    <string name="track_name">Track name</string>
    <string name="track_name_hint">New track name</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="error">Error</string>
    <string name="invalid_username_error_message">Username is invalid</string>
    <string name="measure_default">kilometers</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="no_recorded_track_found">No recorded track found</string>
    <string name="enter_username">Enter username</string>
    <string name="firebase_child_shared_waypoints">shared_waypoints</string>
    <string name="name_firebase_model_key">name</string>
    <string name="set_marker_name">Give the marker a name</string>
    <string name="invalid_marker_name">Invalid marker name</string>
    <string name="delete_marker">Delete marker</string>

</resources>
