<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:title="General"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="@string/username_key"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="Localisation"
        app:iconSpaceReserved="false">

        <ListPreference
            app:defaultValue="network"
            app:entries="@array/localisation_providers"
            app:entryValues="@array/localisation_providers_values"
            app:key="@string/localisation_provider_key"
            app:title="@string/localisation_provider_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:defaultValue="5000"
            app:entries="@array/localisation_update_time_frequency"
            app:entryValues="@array/localisation_update_time_frequency_values"
            app:key="@string/localisation_update_time_frequency_key"
            app:title="@string/localisation_update_time_frequency_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

        <ListPreference
            app:defaultValue="10"
            app:entries="@array/localisation_update_distance_frequency"
            app:entryValues="@array/localisation_update_distance_frequency_values"
            app:key="@string/localisation_update_distance_frequency_key"
            app:title="@string/localisation_update_distance_frequency_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>
